Perch diary and about page

--- a/perch/core/lang/en-gb.txt
+++ b/perch/core/lang/en-gb.txt
@@ -381,5 +381,6 @@
     "Required": "Required",
     "Reordering pages": "Reordering pages",
     "Drag and drop the pages to reorder them.": "Drag and drop the pages to reorder them.",
-    "Page orders successfully updated.": "Page orders successfully updated."
+    "Page orders successfully updated.": "Page orders successfully updated.",
+    "Editing Shared Regions": "Editing Shared Regions"
 }
