Perch v3.1.1 upgrade & textarea image adjustments

--- a/perch/core/lang/en-gb.txt
+++ b/perch/core/lang/en-gb.txt
@@ -386,5 +386,6 @@
     "Enable keyboard shortcuts": "Enable keyboard shortcuts",
     "Skip region list for just one region": "Skip region list for just one region",
     "Enforce bucket restrictions on content": "Enforce bucket restrictions on content",
-    "The template for this region (%s) cannot be found.": "The template for this region (%s) cannot be found."
+    "The template for this region (%s) cannot be found.": "The template for this region (%s) cannot be found.",
+    "%s%s is up to date%s": "%s%s is up to date%s"
 }
